--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,5 +36,5 @@
     <color name="grey_no">#CFCECE</color>
     <color name="yellow_light">#FCEF89</color>
     <color name="yellow">#E4E01A</color>
-    <color name="yellow_trans">#CCFFF8B3</color>
+    <color name="blue_light">#801352F1</color>
 </resources>
