--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -20,7 +20,7 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent">
 
         <TextView
