--- a/app/src/main/res/layout/item_account_admin_manage.xml
+++ b/app/src/main/res/layout/item_account_admin_manage.xml
@@ -72,6 +72,7 @@
                         android:layout_height="wrap_content">
 
                         <ImageView
+                            android:id="@+id/im_sex"
                             android:padding="3dp"
                             android:layout_marginRight="8dp"
                             android:src="@drawable/girl"
@@ -121,6 +122,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:visibility="gone"
                     android:layout_marginRight="16dp"
                     android:id="@+id/im_close"
                     android:layout_gravity="center_vertical|end"
