--- a/app/src/main/res/layout/view_register_account_admin.xml
+++ b/app/src/main/res/layout/view_register_account_admin.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_margin="24dp"
             android:layout_marginBottom="8dp"
-            android:background="@color/yellow_trans"
+            android:background="@color/yellow_light"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingStart="24dp"
