--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -132,5 +132,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <ImageView
+            android:visibility="gone"
+            android:layout_marginRight="16dp"
+            android:id="@+id/im_close"
+            android:src="@drawable/close"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_marginEnd="16dp" />
+
     </LinearLayout>
 </LinearLayout>
