--- a/app/src/main/res/layout/activity_manage_admin_detail.xml
+++ b/app/src/main/res/layout/activity_manage_admin_detail.xml
@@ -157,7 +157,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:visibility="gone"
-            android:id="@+id/rcv_partner"
+            android:id="@+id/rcv_manage"
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
