--- a/app/src/main/res/layout/item_restaurant.xml
+++ b/app/src/main/res/layout/item_restaurant.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/view_rooot"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
     android:layout_marginBottom="8dp"
@@ -48,7 +47,7 @@
 
                 <ImageView
                     android:id="@+id/im_delete"
-                    android:src="@drawable/ic_delete_white_24dp"
+                    android:src="@drawable/ic_lock"
                     android:layout_width="32dp"
                     android:layout_height="32dp" />
 
@@ -57,6 +56,8 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/view_rooot"
+            android:weightSum="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/item_selector"
