--- a/app/src/main/res/layout/item_blog.xml
+++ b/app/src/main/res/layout/item_blog.xml
@@ -1,51 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:id="@+id/view_root"
     android:layout_margin="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/img_notifi"
-        android:layout_gravity="center"
-        android:layout_width="90dp"
-        android:layout_height="90dp" />
+    <com.daimajia.swipe.SwipeLayout
+        android:background="@color/white"
+        xmlns:swipe="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp">
+
+        <LinearLayout
+            android:id="@+id/trash"
+            android:layout_gravity="end"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:tag="Bottom3">
+
+            <LinearLayout
+                android:id="@+id/btn_edit"
+                android:gravity="center"
+                android:background="@color/colorPrimary"
+                android:layout_width="60dp"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:src="@drawable/ic_edit_white_24dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/btn_delete"
+                android:gravity="center"
+                android:background="@color/red"
+                android:layout_width="60dp"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/im_delete"
+                    android:src="@drawable/ic_delete_white_24dp"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     <LinearLayout
-        android:layout_marginLeft="8dp"
-        android:orientation="vertical"
+        android:id="@+id/view_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="sjda hsdjahd hsdahsakjdh hgdha sgdhgad hagsdhagdha hgsdhagd hgsjdhga gsdhagdha gasdjgajdgsajgd ashdg "
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/img_notifi"
+            android:layout_gravity="center"
+            android:layout_width="90dp"
+            android:layout_height="90dp" />
 
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="ghasdgjasadhakjd jasdjs ahjdk akjdhjashdsakj hdkjahdjkahdjkasdg dhgahd sdjag hgsdhs agdhsaghagsd sahg jhgg "
-            android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_marginLeft="8dp"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_time"
-            android:layout_marginTop="16dp"
-            android:text="04-05-2019"
-            android:textSize="12sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_title"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="sjda hsdjahd hsdahsakjdh hgdha sgdhgad hagsdhagdha hgsdhagd hgsjdhga gsdhagdha gasdjgajdgsajgd ashdg "
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_marginTop="8dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="ghasdgjasadhakjd jasdjs ahjdk akjdhjashdsakj hdkjahdjkahdjkasdg dhgahd sdjag hgsdhs agdhsaghagsd sahg jhgg "
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_marginTop="16dp"
+                android:text="04-05-2019"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
+    </com.daimajia.swipe.SwipeLayout>
 </LinearLayout>
