--- a/app/src/main/res/layout/item_blog.xml
+++ b/app/src/main/res/layout/item_blog.xml
@@ -30,7 +30,7 @@
 
                 <ImageView
                     android:id="@+id/im_delete"
-                    android:src="@drawable/ic_delete_white_24dp"
+                    android:src="@drawable/ic_lock"
                     android:layout_width="32dp"
                     android:layout_height="32dp" />
 
@@ -49,41 +49,54 @@
             android:layout_width="90dp"
             android:layout_height="90dp" />
 
-        <LinearLayout
-            android:layout_marginLeft="8dp"
-            android:orientation="vertical"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="sjda hsdjahd hsdahsakjdh hgdha sgdhgad hagsdhagdha hgsdhagd hgsjdhga gsdhagdha gasdjgajdgsajgd ashdg "
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_marginLeft="8dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_content"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="ghasdgjasadhakjd jasdjs ahjdk akjdhjashdsakj hdkjahdjkahdjkasdg dhgahd sdjag hgsdhs agdhsaghagsd sahg jhgg "
-                android:textSize="12sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="sjda hsdjahd hsdahsakjdh hgdha sgdhgad hagsdhagdha hgsdhagd hgsjdhga gsdhagdha gasdjgajdgsajgd ashdg "
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_marginTop="16dp"
-                android:text="04-05-2019"
-                android:textSize="12sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/tv_content"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="ghasdgjasadhakjd jasdjs ahjdk akjdhjashdsakj hdkjahdjkahdjkasdg dhgahd sdjag hgsdhs agdhsaghagsd sahg jhgg "
+                    android:textSize="12sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_time"
+                    android:layout_marginTop="16dp"
+                    android:text="04-05-2019"
+                    android:textSize="12sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/im_close"
+                android:layout_gravity="center"
+                android:src="@drawable/close"
+                android:layout_width="56dp"
+                android:layout_height="56dp" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
