--- a/app/src/main/res/layout/dialog_edit_discount.xml
+++ b/app/src/main/res/layout/dialog_edit_discount.xml
@@ -91,6 +91,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <EditText
+            android:inputType="number"
+            android:maxLines="1"
+            android:ems="10"
+            android:id="@+id/ed_feeship"
+            android:hint="@string/fee_enter"
+            android:imeOptions="actionDone"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:layout_marginTop="16dp"
             android:gravity="center"
