--- a/app/src/main/res/layout/activity_detail_restaurant.xml
+++ b/app/src/main/res/layout/activity_detail_restaurant.xml
@@ -28,6 +28,13 @@
                     android:layout_height="180dp">
 
                     <ImageView
+                        android:id="@+id/im_back"
+                        android:padding="8dp"
+                        android:src="@drawable/ic_arrow_back_white_24dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
                         android:visibility="visible"
                         android:id="@+id/imgQuanAnChiTiet"
                         android:layout_width="match_parent"
