--- a/app/src/main/res/layout/view_chart_admin.xml
+++ b/app/src/main/res/layout/view_chart_admin.xml
@@ -55,6 +55,94 @@
                     android:layout_weight="1"
                     android:layout_marginRight="8dp"
                     android:layout_marginLeft="8dp"
+                    android:id="@+id/sp_res_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:text="@string/year"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_weight="1"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:id="@+id/sp_year_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp" />
+
+                <Button
+                    android:id="@+id/show_year_1"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/show"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="8dp" />
+
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:id="@+id/horizontalScrollView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+                <view
+                    class="im.dacer.androidcharts.LineView"
+                    android:id="@+id/line_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="200dp"
+                    />
+            </HorizontalScrollView>
+
+            <TextView
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="@string/order_by_day"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_marginTop="8dp"
+                    android:text="@string/restaurant"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_weight="1"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
                     android:id="@+id/sp_res"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -69,6 +157,21 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:text="@string/month"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_weight="1"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="8dp"
+                    android:id="@+id/sp_month"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp" />
 
                 <TextView
                     android:text="@string/year"
@@ -103,12 +206,12 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:id="@+id/horizontalScrollView"
+                android:id="@+id/horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">
                 <view
                     class="im.dacer.androidcharts.LineView"
-                    android:id="@+id/line_view"
+                    android:id="@+id/line_view_month"
                     android:layout_width="wrap_content"
                     android:layout_height="200dp"
                     />
