--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,4 +37,5 @@
     <color name="yellow_light">#FCEF89</color>
     <color name="yellow">#E4E01A</color>
     <color name="blue_light">#801352F1</color>
+    <color name="transSta">#80FFFAD0</color>
 </resources>
