--- a/app/src/main/res/layout/fragment_retaurantdetial_info.xml
+++ b/app/src/main/res/layout/fragment_retaurantdetial_info.xml
@@ -53,6 +53,12 @@
             android:src="@drawable/ic_keyboard_arrow_down_24dp" />
     </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:visibility="gone"
+            android:id="@+id/rcv_branch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
     <View
         android:background="@color/bg_grey"
         android:layout_width="match_parent"
