--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -43,6 +43,7 @@
             android:layout_height="64dp" />
 
         <LinearLayout
+            android:id="@+id/v_action"
             android:layout_marginRight="16dp"
             android:layout_gravity="bottom|end"
             android:layout_width="wrap_content"
