--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,4 +38,5 @@
     <color name="yellow">#E4E01A</color>
     <color name="blue_light">#801352F1</color>
     <color name="transSta">#80FFFAD0</color>
+    <color name="green_white">#7EDF64</color>
 </resources>
